# datapipelinetemplate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  runner.py
configs/raw/: cards.json  sets.json
configs/ref/: cards.json  sets.json
source/: __init__.py
source/api/: __init__.py  api_request_object.py  save_json_files.py
source/tasks/: __init__.py
source/tasks/raw/: __init__.py  cards_raw.py  sets_raw.py
source/tasks/ref/: __init__.py  cards_ref.py  sets_ref.py
source/utils/: api_task.py  config.py  files_helper.py  logging.py  spark_task.py  task_config.py
